1.992 version